# 13F_analysis

./: .gitattributes  .gitignore  DATA_SETUP_GUIDE.md  DEPLOYMENT_NOTES.md  README.md  STREAMLIT_CLOUD_DEPLOY.md  launch_dashboard.sh  pyproject.toml  requirements.txt  requirements_streamlit.txt  streamlit_dashboard.py
.streamlit/: config.toml
notebooks/: 00_setup_and_config.ipynb  01_data_exploration.ipynb  02_investment_manager_analysis.ipynb  03_security_holdings_analysis.ipynb  04_market_intelligence.ipynb  99_export_and_reporting.ipynb  README.md  example_quick_start.ipynb
processed_data/: cme_products_filtered.parquet  combined_holdings.parquet  manager_summary.parquet  processing_summary.json  sector_summary.parquet  security_summary.parquet
scripts/: README.md  config.py  preprocess_13f_data.py  process_cme_products.py
